--- a/mediapipe/examples/android/src/java/com/google/mediapipe/apps/aar_example/BUILD
+++ b/mediapipe/examples/android/src/java/com/google/mediapipe/apps/aar_example/BUILD
@@ -2,5 +2,5 @@ load("//mediapipe/java/com/google/mediapipe:mediapipe_aar.bzl", "mediapipe_aar")
 
 mediapipe_aar(
     name = "mp_iris_detection_aar",
-    calculators = ["//mediapipe/graphs/iris_tracking:iris_tracking_gpu_deps"],
+    calculators = ["//mediapipe/graphs/iris_tracking:iris_tracking_gpu_image"],
 )
